--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trybewarts</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Teste 11111</h1>
+  <header class="header">
+    <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="trybewarts-logo">
+    <form class="trybewarts-login"> 
+      <input class="email" type="email" name="email" placeholder="Email">
+      <input class="senha" type="password" name="password" placeholder="Senha">
+      <button class="login">Entrar</button>
+    </form>
+  </header>
+
+  <script src="script.js"></script>
 </body>
 </html>
