--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
 <body>
   <header class="header">
     <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="trybewarts-logo">
+    <h1 id="trybewarts-header-title">Trybewarts</h1>
     <form class="trybewarts-login"> 
       <input class="email" type="email" name="email" placeholder="Email">
       <input class="senha" type="password" name="password" placeholder="Senha">
       <button class="login">Entrar</button>
     </form>
   </header>
+  <main class="form-container">
+    <form action="#" id="evaluation-form">
+      
+    </form>
+    <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="trybewarts-logo">
+  </main>
 
   <script src="script.js"></script>
 </body>
