--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       
   <div class="container">
     <div class="family">
-        <label for="family" id="label-family">"Qual sua família?"</label>
+        <label for="family" id="label-family">Qual sua família?</label>
         <label for="family"><input type="radio" name="family" value="Frontend">Frontend</label> 
         <label for="family"><input type="radio" name="family" value="Backend">Backend</label> 
         <label for="family"><input type="radio" name="family" value="FullStack">FullStack</label> 
@@ -57,6 +57,9 @@
       </div>
     </div>
       <hr>
+    <div class="rate">
+      <label for="" id="label-rate">Como você avalia a Trybewarts?</label>      
+    </div>
 
 
      
