--- a/index.html
+++ b/index.html
@@ -60,12 +60,20 @@
     <div class="rate">
       <label for="" id="label-rate">Como você avalia a Trybewarts?</label>      
     </div>
-
-
-     
+    <div class="text">
+      <label class="textarea" for="">Deixe seu comentário:</label>
+      <br>
+      <textarea name="textarea" id="text-area" cols="30" rows="10" maxlength="500"></textarea>
+      <br>
+      <label id="label-infos" for="">Você concorda com o uso das informações acima</label>
+      <input id="agreement" type="checkbox">
+      <button id="submit-btn" type="submit" disabled>Enviar</button>
+    </div>
     </form>
     <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="trybewarts-logo">
   </main>
+  <footer>Direitos reservados à Trybewarts©</footer>
+  
 
   <script src="script.js"></script>
 </body>
