trabalhando no requisito 22

--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
       <div class="content">
         <label id="label-content" for="">Qual conteúdo você está com mais vontade de aprender?</label>
           <div class="content1">
-            <label for=""><input type="checkbox" value="HoFs">HoFs</label>
-            <label for=""><input type="checkbox" value="Jest">Jest</label>
-            <label for=""><input type="checkbox" value="Promises">Promises</label>
+            <label for=""><input name="tech" class="subject" type="checkbox" value="HoFs">HoFs</label>
+            <label for=""><input name="tech" class="subject" type="checkbox" value="Jest">Jest</label>
+            <label for=""><input name="tech" class="subject" type="checkbox" value="Promises">Promises</label>
           </div>
           <div class="content2"> 
-            <label for=""><input type="checkbox" value="React">React</label>
-            <label for=""><input type="checkbox" value="SQL">SQL</label>
-            <label for=""><input type="checkbox" value="Python">Python</label>
+            <label for=""><input name="tech" class="subject" type="checkbox" value="React">React</label>
+            <label for=""><input name="tech" class="subject" type="checkbox" value="SQL">SQL</label>
+            <label for=""><input name="tech" class="subject" type="checkbox" value="Python">Python</label>
         </div>
       </div>
     </div>
       <hr>
     <div class="rate">
-      <label for="" id="label-rate">Como você avalia a Trybewarts?</label>      
+      <label for="rate" id="label-rate">Como você avalia a Trybewarts?</label>      
     </div>
     <div class="text">
       <label class="textarea" for="">Deixe seu comentário:</label>
